Fix: bad link; fix masonry item on firefox

--- a/src/stylesheets/components/Masonry.css
+++ b/src/stylesheets/components/Masonry.css
@@ -29,6 +29,8 @@
       width: 100%;
       display: block;
       break-inside: avoid;
+
+      &:only-child { display: inline-block; }
     }
   }
 }
